fixed overflow issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -14,6 +14,7 @@ $background: #f0f0f0;
     &:focus {
       outline: none;
     }
+    line-height: 0;
 }
 
 html {
